test/quantumIfClassicalUpdate1.slq
def main(){
	x:=false:ğ”¹;
	n:=0;
	m:=0;
	if x{
		n+=1;
		m=1;
	}
	n+=1; /// error
	m+=1; /// error
	return (n, m); /// error
}
